--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "author": "Samir Patel <samirpatelgx@gmail.com>",
   "license": "ISC",
@@ -18,5 +18,9 @@
   ],
   "dependencies": {
     "aws-sdk": "^2.249.1"
+  },
+  "devDependencies": {
+    "enzyme": "^3.3.0",
+    "jest-cli": "^23.1.0"
   }
 }
